# photopainter-cropper-converter

./: .gitattributes  .gitignore  LICENSE  PhotoPainterCropper.spec  README.md  convert.py  converter.py  main.py  photo_painter_cropper.py  pyproject.toml  requirements.txt  settings.ini
_source/: icon.xcf  iconv.py
sample/: sample_ppcrop.txt
sample/cropped_landscape/dithered/pic_acep/: fileList.txt
samples/: 062be376-85a9-4c0c-b176-43ed1da19620_ppcrop.txt  20-3670x2462_ppcrop.txt  22-4434x3729_ppcrop.txt  27-3264x1836_ppcrop.txt  58-1280x853_ppcrop.txt  63a900ea-972a-4b14-8e16-4e3c3d9c1226_ppcrop.txt  e11d5c66-eafa-4d8a-9a45-d445d2e638c8_ppcrop.txt  e9a40e2d-ac20-4f81-bae8-ce7b669338ea_ppcrop.txt  f24b10bb-fac3-42bb-8511-aa19f12d9ec8_ppcrop.txt  sample_ppcrop.txt
samples/cropped_landscape/dithered/pic_acep/: fileList.txt
utils/: control_definitions.py  converter.py  cropper_app.py  gallery.py  keybinds.py  photo_painter_cropper.py  textoverlay.py  textoverlay_defaults.py  tooltip.py
